--- a/kubetool/templates/plugins/nginx-ingress-controller-v1.0.yaml.j2
+++ b/kubetool/templates/plugins/nginx-ingress-controller-v1.0.yaml.j2
@@ -87,7 +87,7 @@ rules:
       - list
       - watch
   - apiGroups:
-      - networking.k8s.io
+      - networking.k8s.io   # k8s 1.14+
     resources:
       - ingresses
     verbs:
@@ -102,13 +102,13 @@ rules:
       - create
       - patch
   - apiGroups:
-      - networking.k8s.io
+      - networking.k8s.io   # k8s 1.14+
     resources:
       - ingresses/status
     verbs:
       - update
   - apiGroups:
-      - networking.k8s.io
+      - networking.k8s.io   # k8s 1.14+
     resources:
       - ingressclasses
     verbs:
@@ -176,7 +176,7 @@ rules:
       - list
       - watch
   - apiGroups:
-      - networking.k8s.io
+      - networking.k8s.io   # k8s 1.14+
     resources:
       - ingresses
     verbs:
@@ -184,13 +184,13 @@ rules:
       - list
       - watch
   - apiGroups:
-      - networking.k8s.io
+      - networking.k8s.io   # k8s 1.14+
     resources:
       - ingresses/status
     verbs:
       - update
   - apiGroups:
-      - networking.k8s.io
+      - networking.k8s.io   # k8s 1.14+
     resources:
       - ingressclasses
     verbs:
@@ -202,7 +202,7 @@ rules:
     resources:
       - configmaps
     resourceNames:
-      - ingress-controller-leader
+      - ingress-controller-leader-nginx
     verbs:
       - get
       - update
@@ -287,7 +287,7 @@ spec:
           args:
             - /nginx-ingress-controller
             - --election-id=ingress-controller-leader
-            - --ingress-class=k8s.io/ingress-nginx
+            - --controller-class=k8s.io/ingress-nginx
              - --configmap=ingress-nginx/ingress-nginx-controller
             {% if plugins['nginx-ingress-controller']['controller']['ssl']['enableSslPassthrough'] is true -%}
             - --enable-ssl-passthrough
@@ -295,7 +295,6 @@ spec:
             {% if plugins['nginx-ingress-controller']['controller']['ssl']['default-certificate'] is defined -%}
             - --default-ssl-certificate=kube-system/default-ingress-cert
             {%- endif %}
-            - --watch-ingress-without-class=true
           securityContext:
             capabilities:
               drop:
@@ -348,26 +347,3 @@ spec:
         {{ plugins['nginx-ingress-controller']['controller']['tolerations'] | toyaml | indent(width=8, indentfirst=False) -}}
       {%- endif %}
       serviceAccountName: ingress-nginx
-      terminationGracePeriodSeconds: 300
-      volumes:
-        - name: webhook-cert
-          secret:
-            secretName: ingress-nginx-admission
----
-# Source: ingress-nginx/templates/controller-ingressclass.yaml
-# We don't support namespaced ingressClass yet
-# So a ClusterRole and a ClusterRoleBinding is required
-apiVersion: networking.k8s.io/v1
-kind: IngressClass
-metadata:
-  labels:
-    helm.sh/chart: ingress-nginx-4.0.4
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 1.0.3
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/component: controller
-  name: nginx
-  namespace: ingress-nginx
-spec:
-  controller: k8s.io/ingress-nginx
