--- a/kubetool/templates/plugins/calico-v3.20.yaml.j2
+++ b/kubetool/templates/plugins/calico-v3.20.yaml.j2
@@ -30,7 +30,7 @@ data:
           "datastore_type": "kubernetes",
           "nodename": "__KUBERNETES_NODE_NAME__",
           "mtu": __CNI_MTU__,
-          "ipam": {% if services.kubeadm.networking.podSubnet|isipv4 %}{{ plugins['calico']['cni']['ipam']['ipv4']|tojson|safe }},{% else %}{{ plugins['calico']['cni']['ipam']['ipv6']|tojson|safe }},{% endif %}
+          "ipam": {{ plugins['calico']['cni']['ipam']|tojson|safe }},
           "policy": {
               "type": "k8s"
           },
@@ -513,13 +513,6 @@ spec:
                 description: 'BPFEnabled, if enabled Felix will use the BPF dataplane.
                   [Default: false]'
                 type: boolean
-
-
-
-
-
-
-
               bpfExternalServiceMode:
                 description: 'BPFExternalServiceMode in BPF mode, controls how connections
                   from outside the cluster to services (node ports and cluster IPs)
@@ -4016,8 +4009,6 @@ spec:
             - name: CALICO_IPV4POOL_CIDR
               value: "{{ plugins['calico']['env']['CALICO_IPV4POOL_CIDR'] }}"
 
-            - name: FELIX_IPV6SUPPORT
-              value: "{{ plugins['calico']['env']['FELIX_IPV6SUPPORT'] }}"
 {%- if not services.kubeadm.networking.podSubnet|isipv4 %}
             # IPv6 OPTIONS
             - name: CALICO_IPV6POOL_CIDR
