--- a/kubetool/templates/plugins/calico-v3.19.yaml.j2
+++ b/kubetool/templates/plugins/calico-v3.19.yaml.j2
@@ -3957,7 +3957,7 @@ spec:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
           operator: Exists
-        - key: node-role.kubernetes.io/control-plane
+        - key: node-role.kubernetes.io/master
           effect: NoSchedule
       serviceAccountName: calico-kube-controllers
       priorityClassName: system-cluster-critical
