fixed calico and nginx-ingress-controller

--- a/kubemarine/templates/plugins/calico-v3.21.yaml.j2
+++ b/kubemarine/templates/plugins/calico-v3.21.yaml.j2
@@ -2536,7 +2536,7 @@ spec:
                   from this pool.
                 type: boolean
               disableBGPExport:
-                description: 'Disable exporting routes from this IP Pool’s CIDR over
+                description: 'Disable exporting routes from this IP Pools CIDR over
                   BGP. [Default: false]'
                 type: boolean
               ipip:
