--- a/kubemarine/templates/plugins/local-path-provisioner.yaml.j2
+++ b/kubemarine/templates/plugins/local-path-provisioner.yaml.j2
@@ -5,7 +5,7 @@ kind: Namespace
 metadata:
   name: local-path-storage
   labels:
-    {% if rbac['admission'] == "pss" and rbac["pss"]["pod-security"] == "enabled" %}
+    {% if rbac['admission'] == "pss" and rbac["pss"]["pod-security"] == "enabled" and rbac["pss"]["defaults"]["enforce"] != "privileged" %}
     pod-security.kubernetes.io/enforce: privileged
     pod-security.kubernetes.io/enforce-version: latest
     pod-security.kubernetes.io/audit: privileged
