[MANOPD-74000] PSS implementation (#127)
* MANOPD-74000 PSS implementation

* Ambigious files

* PSS fixes

* MANOPD-74000 PSS fixes

* MANOPD-74000 PSS labels for namespaces

* MANOPD-74000 check PSS config

* MANOPD-74000 templates fix

* MANOPD-74000 default config

* MANOPD-74000 default config fix

* MANOPD-74000 fix

* MANOPD-74000 Doc update

* MANOPD-74000 Comments

* MANOPD-74000 Comments

* Update Installation.md

Co-authored-by: shmo1218 <94443646+shmo1218@users.noreply.github.com>

--- a/kubemarine/templates/plugins/local-path-provisioner.yaml.j2
+++ b/kubemarine/templates/plugins/local-path-provisioner.yaml.j2
@@ -4,6 +4,15 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: local-path-storage
+    {% if rbac['admission'] == "pss" and rbac["pss"]["pod-security"] == "enabled" and rbac["pss"]["defaults"]["enforce"] != "privileged" %}
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/enforce-version: latest
+    pod-security.kubernetes.io/audit: privileged
+    pod-security.kubernetes.io/audit-version: latest
+    pod-security.kubernetes.io/warn: privileged
+    pod-security.kubernetes.io/warn-version: latest
+    {% endif %}
 ---
 apiVersion: v1
 kind: ServiceAccount
