--- a/kubemarine/templates/plugins/dashboard-v2.4.yaml.j2
+++ b/kubemarine/templates/plugins/dashboard-v2.4.yaml.j2
@@ -18,6 +18,15 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: kubernetes-dashboard
+    {% if rbac['admission'] == "pss" and rbac["pss"]["pod-security"] == "enabled" and rbac["pss"]["defaults"]["enforce"] == "restricted" %}
+  labels:
+    pod-security.kubernetes.io/enforce: baseline
+    pod-security.kubernetes.io/enforce-version: latest
+    pod-security.kubernetes.io/audit: baseline
+    pod-security.kubernetes.io/audit-version: latest
+    pod-security.kubernetes.io/warn: baseline
+    pod-security.kubernetes.io/warn-version: latest
+    {% endif %}
 
 ---
 
