fix calico RR settings

--- a/kubemarine/templates/plugins/calico-rr.yaml.j2
+++ b/kubemarine/templates/plugins/calico-rr.yaml.j2
@@ -20,7 +20,7 @@ metadata:
   name: peer-with-route-reflectors
 spec:
   nodeSelector: all()
-  peerSelector: route-reflector == 'true'
+  peerSelector: route-reflector == 'True'
 
 {% endif %}
 
