fix nginx ingress

--- a/kubemarine/templates/plugins/nginx-ingress-controller-v1.2.yaml.j2
+++ b/kubemarine/templates/plugins/nginx-ingress-controller-v1.2.yaml.j2
@@ -306,9 +306,9 @@ spec:
         - /nginx-ingress-controller
         - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
         - --election-id=ingress-controller-leader
-        - --controller-class=k8s.io/ingress-nginx
-        - --ingress-class=nginx
+        - --ingress-class=k8s.io/ingress-nginx
         - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
+        - --watch-ingress-without-class=true
         {% if plugins['nginx-ingress-controller']['controller']['ssl']['enableSslPassthrough'] is true -%}
         - --enable-ssl-passthrough
         {%- endif %}
