--- a/kubemarine/templates/plugins/calico-v3.24.yaml.j2
+++ b/kubemarine/templates/plugins/calico-v3.24.yaml.j2
@@ -4486,7 +4486,7 @@ spec:
 
 # This manifest creates a Pod Disruption Budget for Typha to allow K8s Cluster Autoscaler to evict
 
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: calico-typha
@@ -4683,6 +4683,7 @@ spec:
             # Auto-detect the BGP IP address.
             - name: IP
               value: "{{ plugins['calico']['env']['IP'] }}"
+{%- if not services.kubeadm.networking.podSubnet|isipv4 %}
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
               value: "{{ plugins['calico']['env']['CALICO_IPV4POOL_IPIP'] }}"
@@ -4692,6 +4693,7 @@ spec:
             # Enable or Disable VXLAN on the default IPv6 IP pool.
             - name: CALICO_IPV6POOL_VXLAN
               value: "{{ plugins['calico']['env']['CALICO_IPV6POOL_VXLAN'] }}"
+{%- endif %}
             # Set MTU for tunnel device used if ipip is enabled
             - name: FELIX_IPINIPMTU
               valueFrom:
