--- a/kubemarine/templates/plugins/calico-v3.24.yaml.j2
+++ b/kubemarine/templates/plugins/calico-v3.24.yaml.j2
@@ -54,7 +54,7 @@ metadata:
   namespace: kube-system
 data:
   # You must set a non-zero value for Typha replicas below.
-  typha_service_name: "{% if plugins.calico.typha.enabled | default(false) == true %}calico-typha{% else %}none{% endif %}"
+  typha_service_name: "{% if plugins.calico.typha.enabled | default(false) | is_true == true %}calico-typha{% else %}none{% endif %}"
   # Configure the backend to use.
   calico_backend: "bird"
 
@@ -4365,7 +4365,7 @@ subjects:
   name: calico-node
   namespace: kube-system
 
-{% if plugins.calico.typha.enabled | default(false) == true -%}
+{% if plugins.calico.typha.enabled | default(false) | is_true == true -%}
 ---
 # Source: calico/templates/calico-typha.yaml
 # This manifest creates a Service, which will be backed by Calico's Typha daemon.
@@ -4661,7 +4661,7 @@ spec:
             - name: {{ name_env }}
               {% if env is not mapping %}value: "{{ env }}" {% else %}valueFrom: {{ env }}{% endif %}
              {%- endif %}
-             {%- if (plugins.calico.typha.enabled | default(false) == true) and (name_env == 'FELIX_TYPHAK8SSERVICENAME') %}
+             {%- if (plugins.calico.typha.enabled | default(false) | is_true == true) and (name_env == 'FELIX_TYPHAK8SSERVICENAME') %}
             - name: FELIX_TYPHAK8SSERVICENAME
               valueFrom:
                 configMapKeyRef:
