add calico-typha toleration to masters noschedule

--- a/kubemarine/templates/plugins/calico-v3.22.yaml.j2
+++ b/kubemarine/templates/plugins/calico-v3.22.yaml.j2
@@ -4110,6 +4110,10 @@ spec:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
           operator: Exists
+        - key: node-role.kubernetes.io/master
+          operator: Equal
+          value: true
+          effect: NoSchedule
       # Since Calico can't network a pod until Typha is up, we need to run Typha itself
       # as a host-networked pod.
       serviceAccountName: calico-node
