--- a/kubemarine/templates/plugins/calico-v3.24.yaml.j2
+++ b/kubemarine/templates/plugins/calico-v3.24.yaml.j2
@@ -4424,7 +4424,9 @@ spec:
         - key: CriticalAddonsOnly
           operator: Exists
         - key: node-role.kubernetes.io/master
-          operator: Exists
+          effect: NoSchedule
+        - key: node-role.kubernetes.io/control-plane
+          effect: NoSchedule
       # Since Calico can't network a pod until Typha is up, we need to run Typha itself
       # as a host-networked pod.
       serviceAccountName: calico-node
