--- a/kubemarine/templates/plugins/calico-v3.22.yaml.j2
+++ b/kubemarine/templates/plugins/calico-v3.22.yaml.j2
@@ -4110,10 +4110,13 @@ spec:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
           operator: Exists
-        - key: node-role.kubernetes.io/master
+        - key: node.kubernetes.io/network-unavailable
           effect: NoSchedule
-        - key: node-role.kubernetes.io/control-plane
-          effect: NoSchedule
+        - key: node.kubernetes.io/network-unavailable
+          effect: NoExecute
+        {% if plugins['calico']['typha']['tolerations'] is defined -%}
+          {{ plugins['calico']['typha']['tolerations'] | toyaml | indent(width=8, indentfirst=False) -}}
+        {%- endif %}
       # Since Calico can't network a pod until Typha is up, we need to run Typha itself
       # as a host-networked pod.
       serviceAccountName: calico-node
